swagger and working serverUpdate route. Need unit tests.
