# src/services/serversService.ts
@@ -72,7 +72,7 @@ class ServersService {
         select: ServersService.defaultServerSelect,
       })
       .catch((e) => handleDatabaseErrors(e, "server", [id]));
-    await exec(`docker restart '${server?.containerName}'`);
+    await exec(`sudo docker restart '${server?.containerName}'`);
     res.json(server);
   }
 
@@ -81,7 +81,7 @@ class ServersService {
     const { id } = req.params;
     const dbServer = await this.prisma.server
       .findUniqueOrThrow({
-        where: { id: String(id) },
+        where: { id: String(id), isUpdatable: true },
         select: ServersService.completeServerSelect,
       })
       .catch((e) => handleDatabaseErrors(e, "server", [id]));
@@ -93,35 +93,19 @@ class ServersService {
     const server = dbServer!;
 
     // Write build files to temporary directory
-    const temporaryDirectoryName = `temp-${randomUUID()}`;
-    await exec(`mkdir /${temporaryDirectoryName}`);
+    const temporaryDirectoryName = randomUUID();
 
-    server.files.forEach((file) =>
-      fs.writeFileSync(
-        path.join(`/${temporaryDirectoryName}`, path.basename(file.name)),
-        JSON.parse(file.content)
-      )
-    );
-
-    // Build new image
     const dockerBuild: string[] = [
-      `cd /${temporaryDirectoryName} &&`,
-      `docker build -t '${server.containerName}' --no-cache`,
+      `cd ${temporaryDirectoryName} &&`,
+      `sudo docker build -t ${server.containerName} --no-cache`,
     ];
     server.environmentVariables.forEach((variable) => {
       dockerBuild.push(`--build-arg ${variable.name}=${variable.value}`);
     });
-    await exec(dockerBuild.join(" "));
+    dockerBuild.push(".");
 
-    // Stop current container
-    await exec(`docker stop ${server.containerName}`);
-
-    // Remove current container
-    await exec(`docker rm ${server.containerName}`);
-
-    // Run new container
     const dockerRun: string[] = [
-      `docker run --name=${server.containerName} -d --restart unless-stopped ${server.containerName}`,
+      `sudo docker run --name=${server.containerName} -d --restart unless-stopped`,
     ];
     server.ports.forEach((port) => {
       dockerRun.push(`-p ${port.number}:${port.number}/${port.protocol}`);
@@ -129,10 +113,34 @@ class ServersService {
     server.volumes.forEach((volume) => {
       dockerRun.push(`-v ${volume.hostPath}:${volume.containerPath}`);
     });
-    await exec(dockerRun.join(" "));
+    dockerRun.push(`${server.containerName}`);
 
-    // Cleanup temporary directory
-    await exec(`rm -rf /${temporaryDirectoryName}`);
+    try {
+      // Write out the Dockerfile and any other files this server has configured
+      // to a temporary workding directory.
+      await exec(`mkdir ${temporaryDirectoryName}`);
+      server.files.forEach((file) =>
+        fs.writeFileSync(
+          path.join(`${temporaryDirectoryName}`, path.basename(file.name)),
+          Buffer.from(file.content, "base64").toString("utf-8")
+        )
+      );
+
+      // Build new image
+      await exec(dockerBuild.join(" "));
+    } finally {
+      // Cleanup temporary directory
+      await exec(`sudo rm -rf ${temporaryDirectoryName}`);
+    }
+
+    // Send the instruction to stop, remove, and run the new container all at once.
+    // Doing these instructions in one exec allows server-manager-service
+    // to update itself.
+    await exec(`
+      sudo docker stop ${server.containerName}
+      sudo docker rm ${server.containerName}
+      ${dockerRun.join(" ")}
+    `);
 
     // Respond with complete server to indicate the update is complete.
     res.json(server);
